--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Right-Click to Flag <\br>
+		    Right-Click to Flag <br>
 		    Nathan Pham Block 3 APCSA
 	    </footer>
 	</body>
